# mail-parser

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  Makefile  NOTICE.txt  Pipfile  README  README.md  README.rst  docker-compose.yml  exceptions.py  mailparser.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
docker/: Dockerfile  README.md  docker-compose.yml
mailparser/: __init__.py  __main__.py  const.py  exceptions.py  mailparser.py  utils.py  version.py
src/mailparser/: __init__.py  __main__.py  const.py  core.py  exceptions.py  mailparser.py  utils.py  version.py
tests/: test_mail_parser.py  test_main.py  test_utils.py
tests/mails/: mail_malformed  mail_malformed_1  mail_malformed_2  mail_malformed_3  mail_test_1  mail_test_10  mail_test_11  mail_test_12  mail_test_13  mail_test_14  mail_test_15  mail_test_16  mail_test_2  mail_test_3  mail_test_4  mail_test_5  mail_test_6  mail_test_7  mail_test_8  mail_test_9
