[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

# https://docs.astral.sh/ruff/
[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-bandit
    "S",
    # flake8-pytest-style
    "PT",
    # flake8-annotations
    "ANN",
]
ignore = [
    # Missing type annotation for `self` in method
    "ANN101",
]
