[metadata]
name = mail-parser
version = attr: mailparser.version.__version__
description = Improved wrapper for email standard library
license = Apache License, Version 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SpamScope/mail-parser
author = Fedele Mantuano
author_email = mantuano.fedele@gmail.com
maintainer = Fedele Mantuano
maintainer_email = mantuano.fedele@gmail.com
platforms = OS Independent
keywords = email, mail, parser, spam, phishing, malware, forensic, analysis
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
	=src
packages = find:
install_requires =
	six
python_requires = >=3.8

[options.packages.find]
where = src
include = mailparser*

[options.entry_points]
console_scripts =
	mail-parser = mailparser.__main__:main

[options.extras_require]
dev =
	build
	pre-commit
	wheel
	twine

test =
	coverage
	pytest
	pytest-cov
	pytest-mock
	pytest-ordering

[tool:pytest]
addopts =
	--strict-markers
	--strict-config
	-ra
	--cov=src
	--cov=tests
	--cov-report=term
	--cov-branch
	--cov-report=xml
	--cov-report=html
	--junitxml=junit.xml
	--verbose
testpaths = tests
